@@ -21,8 +21,6 @@ import org.bithon.agent.observability.metric.domain.jvm.MemoryRegionMetrics;
 
 import java.lang.management.BufferPoolMXBean;
 import java.lang.management.ManagementFactory;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 
 /**
  * @author frank.chen021@outlook.com
@@ -36,44 +34,21 @@ public class DirectMemoryCollector {
                                                                                 .findFirst()
                                                                                 .get();
 
-    private long max = 0;
+    private final long max;
+    private final IMaxDirectMemoryCollector maxDirectMemoryCollector;
 
-    //
-    // call the VM.maxDirectMemory in static initializer so that if the VM class does not exist, a NoClassDefFoundError will be raised
-    //
     DirectMemoryCollector() throws AgentException {
-        String[][] providers = new String[][]{
-            {"sun.misc.VM", "maxDirectMemory"},
-            {"jdk.internal.misc.VM", "maxDirectMemory"}
-        };
-
-        Method maxMaxMethod = null;
-        for (String[] provider : providers) {
-            String clazz = provider[0];
-            String method = provider[1];
-            try {
-                Class<?> vmClass = Class.forName(clazz);
-                maxMaxMethod = vmClass.getDeclaredMethod(method);
-
-                // even though the method is public
-                // we call this method to trigger the InaccessibleObjectException if required argument is missing
-                maxMaxMethod.setAccessible(true);
-                max = (long) maxMaxMethod.invoke(null);
-                break;
-            } catch (ClassNotFoundException | NoSuchMethodException | IllegalAccessException | InvocationTargetException ignored) {
-            } catch (Exception e) {
-                if ("java.lang.reflect.InaccessibleObjectException".equals(e.getClass().getName())) {
-                    throw new AgentException(
-                        "Bithon requires the access to VM.maxDirectMemory() to monitor the direct memory. For applications running under JRE[%s], please add this argument(--add-exports java.base/jdk.internal.misc=ALL-UNNAMED) to your application command line to grant access.",
-                        JmxBeans.RUNTIME_BEAN.getSpecVersion());
-                }
-            }
-        }
-
-        if (maxMaxMethod == null) {
+        try {
+            // Use factory to get the appropriate implementation based on JDK version
+            // JDK 8: MaxDirectMemoryCollectorJdk8 (uses sun.misc.VM)
+            // JDK 9+: MaxDirectMemoryCollectorJdk9 (uses jdk.internal.misc.VM)
+            maxDirectMemoryCollector = MaxDirectMemoryCollectorFactory.create();
+            max = maxDirectMemoryCollector.getMaxDirectMemory();
+        } catch (Exception e) {
             throw new AgentException(
-                "The application is running under JRE[%s]. But the VM class is not found.",
-                JmxBeans.RUNTIME_BEAN.getSpecVersion());
+                "Failed to initialize direct memory collector for JRE[%s]. Error: %s",
+                JmxBeans.RUNTIME_BEAN.getSpecVersion(),
+                e.getMessage());
         }
     }
 
